1999-08-19  James Henstridge  <james@daa.com.au>

	* objects/flowchart/flowchart.c: added ellipse object.
	
	* objects/flowchart/ellipse.c: a new shape for the flowchart toolbox.

1999-08-18  James Henstridge  <james@daa.com.au>

	* app/color_area.c (color_area_edit): small fix to prevent dia from
	segfaulting when you try to change the default foreground/background.

1999-08-17  Alexander Larsson  <alla@lysator.liu.se>

	* app/diagram.[ch] (diagram_redraw_all):
	Added function that redraws all diagrams.

	* app/preferences.c (prefs_apply):
	Call diagram_redraw_all when prefs are changed.

	* app/render_svg.c:
	Don't use xmlEncodeEntitiesReentrant(). It doesn't exist on
	older libxml's, and the old version works good enought here.
	
1999-08-17  James Henstridge  <james@daa.com.au>

	* lib/widgets.c: changed handlers that were connected to the GtkButton
	"pressed" signal to connect to the "clicked" signal.  This removes the
	problem where dialogs are inactive until you click a mouse button
	after using a colour selector.

	* configure.in: added extra makefiles to AC_OUTPUT list.
	
	* objects/Makefile.am (SUBDIRS): added flowchart module

	* objects/flowchart/*: a collection of shapes for use in flowcharts.

	* app/color_area.c (color_area_events): similar here.

	* app/linewidth_area.c (linewidth_area_events): sometimes a configure
	event is recieved with event->width == 0, which causes a warning if we
	try to create a pixmap of that width.

	* app/preferences.c, app/preferences.h, app/grid.c: added code to
	allow you to configure the colour of the grid, and also lets you
	set the grid to use dotted lines instead of solid ones.
	
	* app/commands.c, app/commands.h, app/diagram.c, app/diagram.h,
	app/menus.c, app/Makefile.am: added menu entry for exporting SVG files.
	
	* app/render_svg.h, app/render_svg.c: an SVG (Scalable Vector Graphics)
	export filter.  It is not quite complete, but for most shapes it
	works as expected.  Fonts still need a bit of work.
